public interface Mediator {
    public void createSubsystem();
    public void recieveInfo(String info,SubSystem subSystem);
    public void radio2SunSyetems(String info,SubSystem subSystem);
}
