public interface SubSystem {
    public void setMediator(Mediator mediator);
    public void recieveInfo(String info);
    public void sentInfo(String info);
}
